Bug 300270: GetDir() returns empty string instead of 'ltr' or 'rtl'. r=sicking, sr=jst